--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "chart.js": "^2.7.2",
+    "ng2-charts": "^1.6.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
